css/style.css
body {
    background-color: #0d0d0d;
}

.main {
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100vh;
}

.welcome-cont {
    position: relative;
    height: 37px;
}

#cursor {
    display: inline-block;
    position: absolute;
    top: 4px;
    left: 0px;
    width: 3px;
    height: 30px;
    background-color: white;
}

#welcome-text {
    color: white;
    display: inline-block;
    margin:0px;
    transition: color .2s, font-size .2s;
    font-family: 'Courier New', Courier, monospace;
    width: max-content;
}

#welcome-text:hover {
    color: #d95f76;
    transition-timing-function: ease-in-out;
    cursor: pointer;
}

#welcome-text:active {
    font-size: 28px;
    transition-timing-function: ease-in-out;
    color: gray;
}

#welcome-text:visited {
    color: #0597f2;
}

#profile-img {
    display: none;
    max-width: 100vw;
}

#story {
    position: relative;
    background-color: #0597f2;
    width: 600px;
    height: 400px;
    overflow-x: hidden;
    display: none;
}

#hero {
    position: absolute;
    transition:left .1s linear;
    top: 250px;
    left: 100px;
    width: 50px;
    height: 100px;
    background-position: -8px 8px;
    z-index: 1;
    background-size: cover;
}

#game-world {
    position: absolute;
    transition:left .1s linear;
    left: 0px;
    top: 0px;
}

.invisible {
    visibility: hidden;
}

#rain {
    position: absolute;
    transition:left .1s linear;
    z-index: 10;
    top: 0px;
    left: 0;
    width: 1800px;
    height: 350px;
    opacity: .5;
    background-image: url('../assets/img/rain.gif');
    background-repeat: repeat-x;
    background-size: contain;

}

